# fabric_calc

./: .flake8  mypy.ini  noxfile.py  pyproject.toml  readme.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
src/: __init__.py  fabric_calc.py  main.py
tests/: __init__.py  test_main.py
