[project]
name = "fabric_cuts"
version = "1.2.2"
authors = [
  { name="Antoine Wood", email="antoinewood@gmail.com" },
]
description = "Library Used to calculate fabric needed for covering rectangular surfaces"
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rectpack~=0.2.2",
    'importlib-metadata; python_version<"3.8"',
]
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project.urls]
"Homepage" = "https://github.com/Trafire/fabric_calc"
"Bug Tracker" = "https://github.com/Trafire/fabric_calc/issues"